--- a/J061_AOML_Assignment1.ipynb
+++ b/J061_AOML_Assignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,212 +12,214 @@
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.metrics import f1_score\n",
     "import joblib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('diabetes.csv')"
+    "data = pd.read_csv('diabetes.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['BMI_category'] = None \n",
-    "df['BMI_category'] = df['BMI_category'].fillna(\n",
-    "    df['BMI'].apply(\n",
-    "        lambda bmi: 'Underweight' if bmi < 18.5 else \n",
-    "        'Healthy weight' if 18.5 <= bmi < 24.9 else \n",
-    "        'Overweight' if 25 <= bmi < 29.9 else \n",
-    "        'Obese'\n",
-    "    )\n",
-    ")"
+    "def categorize_bmi(bmi):\n",
+    "    if bmi < 18.5:\n",
+    "        return \"Underweight\"\n",
+    "    elif 18.5 <= bmi < 24.9:\n",
+    "        return \"Normal weight\"\n",
+    "    elif 25 <= bmi < 29.9:\n",
+    "        return \"Overweight\"\n",
+    "    else:\n",
+    "        return \"Obese\"\n",
+    "\n",
+    "data[\"BMI_category\"] = data[\"BMI\"].apply(categorize_bmi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.drop(columns=['Outcome'])\n",
-    "y = df['Outcome']\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "\n",
-    "num = ['Pregnancies', 'Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI', 'DiabetesPedigreeFunction', 'Age']\n",
-    "cat = ['BMI_category']\n",
-    "\n",
+    "train_data, val_data = train_test_split(data, test_size=0.2, random_state=42, stratify=data[\"Outcome\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_features = [\"Pregnancies\", \"Glucose\", \"BloodPressure\", \"SkinThickness\", \"Insulin\", \"BMI\", \"DiabetesPedigreeFunction\", \"Age\"]\n",
+    "categorical_features = [\"BMI_category\"]\n",
     "\n",
     "scaler = StandardScaler()\n",
-    "X_trainnum = scaler.fit_transform(X_train[num])\n",
-    "X_valnum = scaler.transform(X_val[num])\n",
+    "one_hot_encoder = OneHotEncoder()\n",
     "\n",
-    "encoder = OneHotEncoder(sparse=False)\n",
-    "X_traincat = encoder.fit_transform(X_train[cat])\n",
-    "X_valcat = encoder.transform(X_val[cat])\n",
-    "\n",
-    "X_train = np.hstack((X_trainnum, X_traincat))\n",
-    "X_val = np.hstack((X_valnum, X_valcat))\n"
+    "preprocessor = ColumnTransformer([\n",
+    "    (\"num\", scaler, numeric_features),\n",
+    "    (\"cat\", one_hot_encoder, categorical_features)\n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['encoder.pkl']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "joblib.dump(scaler, 'scaler.pkl')\n",
-    "joblib.dump(encoder, 'encoder.pkl')"
+    "X_train = preprocessor.fit_transform(train_data.drop(columns=[\"Outcome\"]))\n",
+    "X_val = preprocessor.transform(val_data.drop(columns=[\"Outcome\"]))\n",
+    "y_train = train_data[\"Outcome\"].values\n",
+    "y_val = val_data[\"Outcome\"].values\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6181818181818182\n"
+      "KNN (k=3) - Accuracy: 0.7013, F1 Score: 0.5577\n",
+      "KNN (k=5) - Accuracy: 0.7273, F1 Score: 0.5882\n",
+      "KNN (k=7) - Accuracy: 0.7273, F1 Score: 0.5800\n"
      ]
     }
    ],
    "source": [
-    "bestknnmodel = None\n",
-    "bestknnf1 = 0\n",
-    "\n",
+    "best_knn_f1 = 0\n",
+    "best_knn_model = None\n",
+    "best_knn_acc = 0\n",
     "for k in [3, 5, 7]:\n",
     "    knn = KNeighborsClassifier(n_neighbors=k)\n",
     "    knn.fit(X_train, y_train)\n",
-    "    y_predknn = knn.predict(X_val)\n",
-    "    f1knn = f1_score(y_val, y_predknn)\n",
-    "    \n",
-    "    if f1knn > bestknnf1:\n",
-    "        bestknnf1 = f1knn\n",
-    "        bestknnmodel = knn\n",
-    "\n",
-    "print(bestknnf1)"
+    "    y_pred = knn.predict(X_val)\n",
+    "    f1 = f1_score(y_val, y_pred)\n",
+    "    acc = accuracy_score(y_val, y_pred)\n",
+    "    print(f\"KNN (k={k}) - Accuracy: {acc:.4f}, F1 Score: {f1:.4f}\")\n",
+    "    if f1 > best_knn_f1:\n",
+    "        best_knn_f1 = f1\n",
+    "        best_knn_model = knn\n",
+    "        best_knn_acc = acc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.693069306930693\n"
+      "Decision Tree (max_depth=3) - Accuracy: 0.6948, F1 Score: 0.3733\n",
+      "Decision Tree (max_depth=5) - Accuracy: 0.7922, F1 Score: 0.7037\n",
+      "Decision Tree (max_depth=7) - Accuracy: 0.7662, F1 Score: 0.5909\n"
      ]
     }
    ],
    "source": [
-    "besttreemodel = None\n",
-    "besttreef1 = 0\n",
-    "\n",
+    "best_dt_f1 = 0\n",
+    "best_dt_model = None\n",
+    "best_dt_acc = 0\n",
     "for depth in [3, 5, 7]:\n",
-    "    tree = DecisionTreeClassifier(max_depth=depth, random_state=42)\n",
-    "    tree.fit(X_train, y_train)\n",
-    "    y_predtree = tree.predict(X_val)\n",
-    "    f1tree = f1_score(y_val, y_predtree)\n",
-    "    \n",
-    "    if f1tree > besttreef1:\n",
-    "        besttreef1 = f1tree\n",
-    "        besttreemodel = tree\n",
-    "\n",
-    "print(besttreef1)"
+    "    dt = DecisionTreeClassifier(max_depth=depth, random_state=42)\n",
+    "    dt.fit(X_train, y_train)\n",
+    "    y_pred = dt.predict(X_val)\n",
+    "    f1 = f1_score(y_val, y_pred)\n",
+    "    acc = accuracy_score(y_val, y_pred)\n",
+    "    print(f\"Decision Tree (max_depth={depth}) - Accuracy: {acc:.4f}, F1 Score: {f1:.4f}\")\n",
+    "    if f1 > best_dt_f1:\n",
+    "        best_dt_f1 = f1\n",
+    "        best_dt_model = dt\n",
+    "        best_dt_acc = acc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['besttreemodel.pkl']"
+       "['best_model.pkl']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(bestknnmodel, 'bestknnmodel.pkl')\n",
-    "joblib.dump(besttreemodel, 'besttreemodel.pkl')"
+    "best_model = best_knn_model if best_knn_f1 > best_dt_f1 else best_dt_model\n",
+    "\n",
+    "# Save preprocessing and model\n",
+    "joblib.dump(scaler, \"scaler.pkl\")\n",
+    "joblib.dump(one_hot_encoder, \"one_hot_encoder.pkl\")\n",
+    "joblib.dump(best_model, \"best_model.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def inference_pipeline(sample_data):\n",
-    "    loaded_scaler = joblib.load('scaler.pkl')\n",
-    "    loaded_encoder = joblib.load('encoder.pkl')\n",
-    "    loaded_model = joblib.load('besttreemodel.pkl') \n",
-    "    sample_numeric = loaded_scaler.transform(sample_data[num])\n",
-    "    sample_categorical = loaded_encoder.transform(sample_data[cat])\n",
-    "    sample_processed = np.hstack((sample_numeric, sample_categorical))\n",
-    "    predictions = loaded_model.predict(sample_processed)\n",
-    "    return predictions\n"
+    "def predict_sample(sample):\n",
+    "    # Load preprocessing and model\n",
+    "    scaler = joblib.load(\"scaler.pkl\")\n",
+    "    encoder = joblib.load(\"one_hot_encoder.pkl\")\n",
+    "    model = joblib.load(\"best_model.pkl\")\n",
+    "    \n",
+    "    # Process input\n",
+    "    sample_df = pd.DataFrame([sample])\n",
+    "    sample_df[\"BMI_category\"] = sample_df[\"BMI\"].apply(categorize_bmi)\n",
+    "    \n",
+    "    transformed_sample = preprocessor.transform(sample_df)\n",
+    "    \n",
+    "    # Predict\n",
+    "    prediction = model.predict(transformed_sample)\n",
+    "    return prediction[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "tuple indices must be integers or slices, not list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_9360\\2594412139.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0msample_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m148\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m72\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m35\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m33.6\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0.627\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m50\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mpredictions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minference_pipeline\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Predictions for first five samples:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_9360\\1086934868.py\u001b[0m in \u001b[0;36minference_pipeline\u001b[1;34m(sample_data)\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mloaded_encoder\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjoblib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'encoder.pkl'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mloaded_model\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjoblib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'besttreemodel.pkl'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0msample_numeric\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mloaded_scaler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[0msample_categorical\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mloaded_encoder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcat\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0msample_processed\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhstack\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_numeric\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msample_categorical\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: tuple indices must be integers or slices, not list"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted Class: 1\n",
+      "Predicted Class: 1\n",
+      "Predicted Class: 1\n",
+      "Predicted Class: 0\n",
+      "Predicted Class: 0\n"
      ]
     }
    ],
    "source": [
-    "sample_data = 6,148,72,35,0,33.6,0.627,50\n",
-    "predictions = inference_pipeline(sample_data)\n",
-    "print(\"Predictions for first five samples:\", predictions)"
+    "sample_data = val_data.sample(5, random_state=42).drop(columns=[\"Outcome\"])\n",
+    "for _, row in sample_data.iterrows():\n",
+    "    print(f\"Predicted Class: {predict_sample(row.to_dict())}\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
