--- a/J061_AOML_Assignment2.ipynb
+++ b/J061_AOML_Assignment2.ipynb
@@ -1,13 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# Star Classification Dataset"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -28,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -37,198 +30,9 @@
         "id": "X79ddLDtVziV",
         "outputId": "b0aea2f1-3717-4a93-c02d-6eaa56a1f38c"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\itssp\\AppData\\Local\\Temp\\ipykernel_5996\\1288883801.py:1: DtypeWarning: Columns (1,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-            "  df= pd.read_csv(\"data/star.csv\")\n"
-          ]
-        },
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>object_ID</th>\n",
-              "      <th>alpha</th>\n",
-              "      <th>delta</th>\n",
-              "      <th>UV_filter</th>\n",
-              "      <th>green_filter</th>\n",
-              "      <th>red_filter</th>\n",
-              "      <th>near_IR_filter</th>\n",
-              "      <th>IR_filter</th>\n",
-              "      <th>run_ID</th>\n",
-              "      <th>rerun_ID</th>\n",
-              "      <th>cam_col</th>\n",
-              "      <th>field_ID</th>\n",
-              "      <th>spec_obj_ID</th>\n",
-              "      <th>red_shift</th>\n",
-              "      <th>plate_ID</th>\n",
-              "      <th>MJD</th>\n",
-              "      <th>fiber_ID</th>\n",
-              "      <th>class</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1.240000e+18</td>\n",
-              "      <td>135.6891066</td>\n",
-              "      <td>32.494632</td>\n",
-              "      <td>23.87882</td>\n",
-              "      <td>22.27530</td>\n",
-              "      <td>20.39501</td>\n",
-              "      <td>19.16573</td>\n",
-              "      <td>18.79371</td>\n",
-              "      <td>3606</td>\n",
-              "      <td>301</td>\n",
-              "      <td>2</td>\n",
-              "      <td>79</td>\n",
-              "      <td>6.540000e+18</td>\n",
-              "      <td>0.634794</td>\n",
-              "      <td>5812</td>\n",
-              "      <td>56354</td>\n",
-              "      <td>171</td>\n",
-              "      <td>GALAXY</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>1.240000e+18</td>\n",
-              "      <td>144.8261006</td>\n",
-              "      <td>31.274185</td>\n",
-              "      <td>24.77759</td>\n",
-              "      <td>22.83188</td>\n",
-              "      <td>22.58444</td>\n",
-              "      <td>21.16812</td>\n",
-              "      <td>21.61427</td>\n",
-              "      <td>4518</td>\n",
-              "      <td>301</td>\n",
-              "      <td>5</td>\n",
-              "      <td>119</td>\n",
-              "      <td>1.180000e+19</td>\n",
-              "      <td>0.779136</td>\n",
-              "      <td>10445</td>\n",
-              "      <td>58158</td>\n",
-              "      <td>427</td>\n",
-              "      <td>GALAXY</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>1.240000e+18</td>\n",
-              "      <td>142.1887896</td>\n",
-              "      <td>35.582444</td>\n",
-              "      <td>25.26307</td>\n",
-              "      <td>22.66389</td>\n",
-              "      <td>20.60976</td>\n",
-              "      <td>19.34857</td>\n",
-              "      <td>18.94827</td>\n",
-              "      <td>3606</td>\n",
-              "      <td>301</td>\n",
-              "      <td>2</td>\n",
-              "      <td>120</td>\n",
-              "      <td>5.150000e+18</td>\n",
-              "      <td>0.644195</td>\n",
-              "      <td>4576</td>\n",
-              "      <td>55592</td>\n",
-              "      <td>299</td>\n",
-              "      <td>GALAXY</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>1.240000e+18</td>\n",
-              "      <td>338.7410378</td>\n",
-              "      <td>-0.402828</td>\n",
-              "      <td>22.13682</td>\n",
-              "      <td>23.77656</td>\n",
-              "      <td>21.61162</td>\n",
-              "      <td>20.50454</td>\n",
-              "      <td>19.25010</td>\n",
-              "      <td>4192</td>\n",
-              "      <td>301</td>\n",
-              "      <td>3</td>\n",
-              "      <td>214</td>\n",
-              "      <td>1.030000e+19</td>\n",
-              "      <td>0.932346</td>\n",
-              "      <td>9149</td>\n",
-              "      <td>58039</td>\n",
-              "      <td>775</td>\n",
-              "      <td>GALAXY</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>1.240000e+18</td>\n",
-              "      <td>345.2825932</td>\n",
-              "      <td>21.183866</td>\n",
-              "      <td>19.43718</td>\n",
-              "      <td>17.58028</td>\n",
-              "      <td>16.49747</td>\n",
-              "      <td>15.97711</td>\n",
-              "      <td>15.54461</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>301</td>\n",
-              "      <td>3</td>\n",
-              "      <td>137</td>\n",
-              "      <td>6.890000e+18</td>\n",
-              "      <td>0.116123</td>\n",
-              "      <td>6121</td>\n",
-              "      <td>56187</td>\n",
-              "      <td>842</td>\n",
-              "      <td>GALAXY</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "      object_ID        alpha      delta  UV_filter  green_filter  red_filter  \\\n",
-              "0  1.240000e+18  135.6891066  32.494632   23.87882      22.27530    20.39501   \n",
-              "1  1.240000e+18  144.8261006  31.274185   24.77759      22.83188    22.58444   \n",
-              "2  1.240000e+18  142.1887896  35.582444   25.26307      22.66389    20.60976   \n",
-              "3  1.240000e+18  338.7410378  -0.402828   22.13682      23.77656    21.61162   \n",
-              "4  1.240000e+18  345.2825932  21.183866   19.43718      17.58028    16.49747   \n",
-              "\n",
-              "   near_IR_filter  IR_filter run_ID  rerun_ID  cam_col  field_ID  \\\n",
-              "0        19.16573   18.79371   3606       301        2        79   \n",
-              "1        21.16812   21.61427   4518       301        5       119   \n",
-              "2        19.34857   18.94827   3606       301        2       120   \n",
-              "3        20.50454   19.25010   4192       301        3       214   \n",
-              "4        15.97711   15.54461    NaN       301        3       137   \n",
-              "\n",
-              "    spec_obj_ID  red_shift  plate_ID    MJD  fiber_ID   class  \n",
-              "0  6.540000e+18   0.634794      5812  56354       171  GALAXY  \n",
-              "1  1.180000e+19   0.779136     10445  58158       427  GALAXY  \n",
-              "2  5.150000e+18   0.644195      4576  55592       299  GALAXY  \n",
-              "3  1.030000e+19   0.932346      9149  58039       775  GALAXY  \n",
-              "4  6.890000e+18   0.116123      6121  56187       842  GALAXY  "
-            ]
-          },
-          "execution_count": 2,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "df= pd.read_csv(\"data/star.csv\")\n",
-        "\n",
-        "df.head()"
+        "df= pd.read_csv(\"stars.csv\")\\"
       ]
     },
     {
