--- a/J061_AOML_Assignment2.ipynb
+++ b/J061_AOML_Assignment2.ipynb
@@ -246,37 +246,23 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The model has achieved high accuracy (98%), which suggests it performs well on the given dataset. Below are the key observations:\n",
+        "# Findings from the Classification Report and Confusion Matrix\n",
         "\n",
-        "Class-wise Performance:\n",
+        "## 1. Overall Performance  \n",
+        "- **Accuracy: 98%** – The model performs very well in classifying GALAXY, QSO, and STAR.  \n",
         "\n",
-        "GALAXY:\n",
-        "Precision: 0.98 (Very few false positives)\n",
-        "Recall: 0.99 (Almost all galaxies are correctly classified)\n",
-        "F1-score: 0.98 (Good balance between precision & recall)\n",
+        "## 2. Class-wise Performance  \n",
+        "- **GALAXY:** High precision (0.98) and recall (0.99), with minor misclassifications.  \n",
+        "- **QSO:** Slightly weaker recall (0.93), with **266 misclassified as GALAXY**.  \n",
+        "- **STAR:** Almost perfect classification (Precision: 0.99, Recall: 1.00).  \n",
         "\n",
-        "QSO (Quasi-Stellar Objects):\n",
-        "Precision: 0.97 (Very few false positives)\n",
-        "Recall: 0.93 (Some QSOs are misclassified as other classes)\n",
-        "F1-score: 0.95 (Lower than GALAXY and STAR)\n",
+        "## 3. Key Misclassifications  \n",
+        "- **QSO → GALAXY (266 cases)** is the biggest issue.  \n",
+        "- **GALAXY → QSO (115 cases)** and **STAR → GALAXY (1 case)** are minimal.  \n",
         "\n",
-        "STAR:\n",
-        "Precision: 0.99 (Almost no false positives)\n",
-        "Recall: 1.00 (All stars are correctly classified)\n",
-        "F1-score: 1.00 (Perfect performance)\n",
-        "\n",
-        "Class Imbalance Consideration:\n",
-        "\n",
-        "The dataset is imbalanced with more galaxies (11,889) compared to QSOs (3,792) and stars (4,319).\n",
-        "This could explain why QSO has the lowest recall (0.93)—the model might struggle to correctly classify minority classes.\n",
-        "\n",
-        "Macro vs. Weighted Averages:\n",
-        "\n",
-        "Macro avg (Unweighted mean): 0.98 precision, 0.97 recall, 0.98 F1-score\n",
-        "\n",
-        "Weighted avg (Considering class sizes): 0.98 precision, 0.98 recall, 0.98 F1-score\n",
-        "\n",
-        "Since the macro and weighted scores are similar, the model does not heavily favor the majority class."
+        "## 4. Conclusion  \n",
+        "- The model is **highly accurate** but struggles slightly with QSO classification.  \n",
+        "- Improvements could include **better class balancing, feature engineering, or tuning decision boundaries**.  \n"
       ]
     },
     {
@@ -426,34 +412,25 @@
         "id": "b8w7rgVocli4"
       },
       "source": [
-        "Findings from Ridge vs. Lasso Regression :\n",
+        "# Ridge vs. Lasso Regression Evaluation  \n",
         "\n",
-        "Ridge Regression (Lower Errors )\n",
+        "## Ridge Regression (Lower Errors)  \n",
+        "- **MAE:** 0.5405 (Better predictions)  \n",
+        "- **MSE:** 0.5397 (Fewer large errors)  \n",
+        "- **RMSE:** 0.7346 (Better overall fit)  \n",
         "\n",
-        "MAE = 0.5405 (Lower, meaning better predictions)\n",
-        "MSE = 0.5397 (Lower, meaning fewer large errors)\n",
-        "RMSE = 0.7346 (Lower, meaning overall better fit)\n",
+        "## Lasso Regression (Higher Errors)  \n",
+        "- **MAE:** 0.6254 (Less accurate predictions)  \n",
+        "- **MSE:** 0.6900 (More large errors)  \n",
+        "- **RMSE:** 0.8307 (Worse overall fit)  \n",
         "\n",
-        "Lasso Regression (Higher Errors )\n",
+        "## Key Observations  \n",
+        "1. **Ridge performed better** across all metrics, preserving useful features while preventing overfitting.  \n",
+        "2. **Lasso had higher errors**, likely due to shrinking some features to zero, leading to information loss.  \n",
+        "3. **Use Ridge for better accuracy** and Lasso if feature selection is important.  \n",
         "\n",
-        "MAE = 0.6254 (Higher, meaning less accurate predictions)\n",
-        "MSE = 0.6900 (Higher, meaning more large errors)\n",
-        "RMSE = 0.8307 (Higher, meaning worse overall fit)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "hmtALW_-cwSs"
-      },
-      "source": [
-        "Key Observations:\n",
-        "\n",
-        "1. Ridge performed better than Lasso across all metrics, meaning it preserved useful features while preventing overfitting.\n",
-        "\n",
-        "2. Lasso had higher errors, likely due to some features being shrunk to zero, losing valuable information.\n",
-        "\n",
-        "3. If feature selection is important, Lasso is useful despite its higher error. But if we need better accuracy, Ridge is the better choice."
+        "### Conclusion  \n",
+        "Ridge regression is the better choice for this dataset due to its lower errors and better predictive performance. However, if reducing the number of features is a priority, Lasso remains useful despite its higher errors.  \n"
       ]
     }
   ],
